<resources>
    <string name="app_name">Lotto</string>
    <string name="statistics">סטטיסטיקה:</string>
    <string name="digitFrame">מספר ספרות:</string>
    <string name="dateInterval">טווח הגרלות:</string>
    <string name="startDateHint">תאריך התחלה</string>
    <string name="endDateHint">תאריך אחרון</string>
    <string name="frequencyValue">מספר</string>
    <string name="frequencyLebel">צפיפות:</string>
    <string name="rareLabel">הכי נדיר</string>
    <string name="commonLabel">הכי נפוץ</string>
    <string name="resultSizeLabel">מספר תוצאות</string>
    <string name="frequencySizeLabel">מספר הגרלות אחרונות:</string>
    <string name="showResultButton">הצג תוצאות</string>
</resources>